src/objects/MCAR_Category_Cross_Reference__c.object
<CustomObject>
    <description>MCAR- DEM0008846</description>
    <fields>
        <fullName>COM__c</fullName>
        <label>Legacy COM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Area_ID__c</fullName>
        <label>Category Area ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Area__c</fullName>
        <description>MCAR- DEM0008846</description>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group_ID__c</fullName>
        <label>Category Group ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <description>MCAR- DEM0008846</description>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_ID__c</fullName>
        <label>Category ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_XR_ID_Formula__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Id, Category_XR_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category_XR_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_XR_ID__c</fullName>
        <displayFormat>C-{000000}</displayFormat>
        <label>Category XR ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ESN__c</fullName>
        <description>MCAR- DEM0008846</description>
        <label>COM (ESN, SubCatID)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FALU_COMM__c</fullName>
        <label>FALU COMM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Category XR</label>
    <nameField>
        <label>Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category XR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>